found optimized way of calculating surprisal

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 .Rhistory
 .RData
 .Ruserdata
+.DS_Store
 raw_data/*
 processed_data/*
 python_utils/actual_agency/*
 */__pycache__
 settings.json
-.DS_Store
+mabe/*
